joinTable_game_slot_player_created